# audit-guardian

./: .gitignore  AuditGuardian.sln  NativeCollectors.sln  PLAN.md  README.md
audit-panel/: index.html  package.json
audit-panel/src/: App.tsx
client/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts
client/native/EventLogCollector/: EventLogCollector.csproj  Program.cs
client/native/FileActivityReader/: FileActivityReader.csproj  Program.cs
client/native/HardwareCollector/: HardwareCollector.csproj  Program.cs
client/native/KernelDetector/: CMakeLists.txt  callback_detector.cpp  driver_scanner.cpp  main.cpp  ssdt_detector.cpp
client/resources/signatures/: driver_blacklist.json  process_blacklist.json
docs/: architecture.md  deployment.md  user-manual.md
scripts/: build-all.ps1  build-native.ps1
server/: .env.example  requirements.txt
server/app/: config.py  database.py  main.py
server/app/api/: admin.py  auth.py  cases.py  reports.py
server/app/models/: __init__.py  case.py  report.py  user.py
server/app/schemas/: auth.py  case.py  report.py
src/AuditGuardian.Desktop/: App.xaml  App.xaml.cs  AuditGuardian.Desktop.csproj  LoginWindow.xaml  LoginWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Usings.cs
src/AuditGuardian.Desktop/Models/: EventModels.cs  HardwareModels.cs  KernelModels.cs  ScanModels.cs
src/AuditGuardian.Desktop/Services/: CollectorRunner.cs  EventLogService.cs  HardwareService.cs  KernelDetectionService.cs  ScanService.cs  ServerConnectionService.cs
(+1 files in other folders)
